# fftrip

./: CMakeLists.txt  CMakePresets.json  audioanalyzer.cpp  audioanalyzer.h  colors.h  font_fragment.glsl  font_rendering.h  font_vertex.glsl  fragment.glsl  helpers.h  main.cpp  pipewire.sh  pixel_fragment.glsl  pixel_vertex.glsl  postproc.f.glsl  postproc.v.glsl  vertex.glsl
final/: fragment.glsl  vertex.glsl
outlines/: data.json  ellipse.json  kitty.json  outline.py  plot.py  star.json
